# Vulkaning-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  imgui.ini
demos/: CMakeLists.txt
demos/fluid/: CMakeLists.txt
demos/fluid/shaders/: CMakeLists.txt  fluid_density.comp
demos/fluid/shaders/spirv/: fluid_density.comp.spv
demos/fluid/src/: cells_entry.hpp  fluid_simulation.hpp  main.cpp  main1.cpp  particle.hpp  particle_grid.cpp  particle_grid.hpp  radix_sort.hpp  spatial_particle_grid.cpp  spatial_particle_grid.hpp  thread_pool.hpp  timings.hpp
demos/lighting/: CMakeLists.txt
demos/lighting/shaders/: CMakeLists.txt
demos/lighting/src/: main.cpp
demos/meshes/: DragonAttenuation.mtl
demos/slime/: CMakeLists.txt
demos/slime/shaders/: CMakeLists.txt  slime.comp
demos/slime/shaders/spirv/: slime.comp.spv
demos/slime/src/: main.cpp
engine/: CMakeLists.txt
engine/dependencies/: CMakeLists.txt
engine/include/: compute_pipeline.hpp  engine.hpp  gpu_buffer.hpp  graphics_pipeline.hpp  imgui_renderer.hpp  imgui_utils.hpp  mesh.hpp  mesh_generator.hpp  mesh_loader.hpp  mesh_renderer.hpp  model.hpp  model_renderer.hpp  output_operators.hpp  perspective_camera.hpp  primitives_renderer.hpp  render_frames.hpp  shader_resources.hpp  slime_renderer.hpp  swapchain.hpp  texture_2d.hpp  vertex.hpp  vulkan_core.hpp  vulkan_instance.hpp  window.hpp
engine/include/math/: common.h  constants.hpp  mat4.hpp  matrix_transform.hpp  trigonometry.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_functions.hpp
engine/shaders/: CMakeLists.txt  circle.frag  fade_and_diffuse.comp  mesh.frag  mesh.vert  primitive.vert  slime.comp  square.frag
engine/shaders/spirv/: circle.frag.spv  fade_and_diffuse.comp.spv  mesh.frag.spv  mesh.vert.spv  primitive.frag.spv  primitive.vert.spv  slime.comp.spv  square.frag.spv
engine/src/: compute_pipeline.cpp  engine.cpp  gpu_buffer.cpp  graphics_pipeline.cpp  imgui_renderer.cpp  imgui_utils.cpp  mesh.cpp  mesh_loader.cpp  mesh_renderer.cpp  model.cpp  model_renderer.cpp  perspective_camera.cpp  primitives_renderer.cpp  render_frames.cpp  shader_resources.cpp  slime_renderer.cpp  swapchain.cpp  texture_2d.cpp  vulkan_core.cpp  vulkan_instance.cpp  window.cpp
engine/src/math/: mat4.cpp  matrix_transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vec_functions.cpp
engine/utility/: vulkan_create.cpp  vulkan_create.hpp  vulkan_utils.cpp  vulkan_utils.hpp
